flux/infrastructure/kyverno/verify-external-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-external-images
spec:
  validationFailureAction: Audit
  background: true
  webhookTimeoutSeconds: 30
  rules:
    - name: verify-cilium-images
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - imageReferences:
            - "quay.io/cilium/*"
          attestors:
            - entries:
                - keyless:
                    rekor:
                      url: https://rekor.sigstore.dev
                    ctlog:
                      ignoreSCT: true
          mutateDigest: false
          verifyDigest: true
    - name: verify-cert-manager-images
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - imageReferences:
            - "quay.io/jetstack/*"
          attestors:
            - entries:
                - keyless:
                    rekor:
                      url: https://rekor.sigstore.dev
                    ctlog:
                      ignoreSCT: true
          mutateDigest: false
          verifyDigest: true
    - name: verify-kyverno-images
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
        - imageReferences:
            - "ghcr.io/kyverno/*"
          attestors:
            - entries:
                - keyless:
                    rekor:
                      url: https://rekor.sigstore.dev
                    ctlog:
                      ignoreSCT: true
          mutateDigest: false
          verifyDigest: true
