flux/infrastructure/kyverno/verify-internal-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-internal-images
spec:
  validationFailureAction: Enforce
  background: true
  webhookTimeoutSeconds: 30
  rules:
    - name: verify-cosign-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - wallet-hsm
      imageExtractors:
        Pod:
          - name: "containers"
            path: /spec/containers/*/image
          - name: "initcontainers"
            path: /spec/initContainers/*/image
      verifyImages:
        - imageReferences:
            - "zot.registry.svc.cluster.local:5000/*"
          attestors:
            - entries:
                - keys:
                    publicKeys: |-
                      -----BEGIN PUBLIC KEY-----
                      MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEdRD06uGvVe3x4LokrhfY7DY5J05o
[...]
                      -----END PUBLIC KEY-----
                    signatureAlgorithm: sha256
          mutateDigest: true
          verifyDigest: true
